2021-10-26  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add 'See Also' to RcppQuantuccia

2021-10-06  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.4.14
	* configure.ac: Idem
	* configure: Idem

	* configure.ac: Updated via 'autoupdate' and 'autoreconf
	--warnings=obsolete' to bring to autoconf 2.69 standards

2021-09-29  Dirk Eddelbuettel  <edd@debian.org>

	* src/calendars.cpp (getCalendar): Add Austria (plus Exchange),
	Bespoke, Botswana, Israel (plus TASE), Romania (plus BVB), Thailand
	* src/calendars.cpp (getCalendar): Protect Austria and Romania by an
	#ifdef for the QuantLib version to permit CRAN builds under older QL

	* .github/workflows/ci.yaml (env): Add edd/misc PPA for CI
 	* .github/workflows/docker.yaml (on): Restrict Docker rebuilds to
	pushes to master branch

2021-09-28  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor release

	* src/calendars.cpp (getCalendar): Support new UnitedStates calendars
	'LiborImpact' and 'FederalReserve'
	* src/calendars.cpp (getCalendar): Support new calendars 'France' (same
	as 'France/Settlement') and 'France/Exchange'

2021-09-26  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/docker.yaml: Add action to build and push
	containers with cron set to monthly schedule

2021-09-02  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.4.13

	* configure.ac: Idem
	* configure: Idem

	* man/*.R: Update remaining http:// URLs to https://
	* man/ConvertibleBond.Rd: Wrap \dontrun{} around example as it runs
	twice as long as CRAN preference for five second examples
	* man/FittedBondCurve.Rd: Idem

2021-08-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor release

	* src/bonds.cpp (fittedBondCurveEngine): Use Actual365Fixed() instead
	of deprecated ActualActual()
	* src/discount.cpp (discountCurveEngine):  Idem
	* src/utils.cpp (rebuildCurveFromZeroRates): Idem