@@ -1,3 +1,7 @@
+2021-11-01  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/calendars.cpp (getCalendar): Add Chile and Null
+
 2021-10-26  Dirk Eddelbuettel  <edd@debian.org>
 
 	* README.md: Add 'See Also' to RcppQuantuccia
